[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=1]
[ext_resource path="res://src/Ability/Base/DamageNumberTemplate.gd" type="Script" id=2]

[node name="DamageNumber" type="Node2D"]
script = ExtResource( 2 )

[node name="DamageNumberLabel" type="Label" parent="."]
margin_left = -10.0
margin_top = -8.0
margin_right = 40.0
margin_bottom = 30.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "100"
align = 1
valign = 1

[node name="TextDuration" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="TextDuration" to="." method="_on_TextDuration_timeout"]
